# GeomOO

./: CMakeLists.txt  README
Documentation/: CMakeLists.txt  Doxyfile.in
cpp/: CMakeLists.txt  Circle.cc  Circle.h  Cone.cc  Cylinder.cc  Cylinder.h  Ellipse.h  Form.h  PolarCoordinate.cc  Polygon.cc  PositionVector.h  Shape.cc  Shape.h
cpp/bindings/: CMakeLists.txt
cpp/test/: CMakeLists.txt  tCylinder.cc  tPolarCoordinate.cc  tSphere.cc
doc/: Doxyfile.in
python/: CMakeLists.txt
ruby/: CMakeLists.txt  Circle.rb  Shape.rb
src/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/geom_cpp/: Circle.cc  Circle.h  Cone.h  ConeSegment.cc  ConeSegment.h  Cylinder.cc  Cylinder.h  Form.cc  Form.h  PolarCoordinate.h  Polygon.h  PositionVector.cc  Shape.cc  Sphere.cc  Sphere.h  SphericalCoordinate.h
src/tests/geom++/: circles.cc  tCircle.cc  tCone.cc  tConeSegment.cc
